updated creating model files
